<resources>
    <string name="app_name">Soluciona</string>

    <string name="title_activity_financing_list">FinancingListActivity</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="button_cadastrar">Cadastre-se</string>
    <string name="login_button_singin">ENTRAR</string>

    <string name="log_tag">JINKINGS</string>
    <string name="login_signup_message">Ainda não tem cadastro?</string>
    <string name="login_signup_link">Cadastre-se agora!</string>
    <string name="section_header_personal_info">Dados Pessoais</string>

    <string name="hint_fullname">Nome Completo</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_phone">Telefone Residencial com DDD</string>
    <string name="hint_cellphone">Celular com DDD</string>
    <string name="hint_job_category">Categoria Profissional</string>
    <string name="hint_confirm_password">Confirmar Senha</string>

    <string name="invalid_email">Email inválido</string>
    <string name="invalid_password">Senha inválida</string>
    <string name="invalid_password_confirmation">Confirmação de senha inválida</string>
    <string name="invalid_cpf">CPF inválido</string>
    <string name="invalid_fullname">Preencha seu nome</string>
    <string name="invalid_phone">Telefone inválido</string>
    <string name="invalid_mobile_phone">Celular inválido</string>
    <string name="invalid_form_message">Preencha o formulário corretamente</string>
    <string name="invalid_job_category">Categoria inválida</string>

    <string name="signup_snackbar_action_validation_failed">OK</string>
    <string name="signup_snackbar_action_retry">TENTAR NOVAMENTE</string>
    <string name="signup_success">Usuário cadastrado com sucesso!</string>
    <string name="signup_confirm_action">CONFIRMAR</string>
    <string name="content_logo">Logo da empresa</string>
    <string name="title_signup_activity">Cadastre-se</string>
    <string name="dialog_close_button">FECHAR</string>
    <string name="default_signup_error_message">Não foi possível efetuar seu cadastro. Tente novamente mais tarde.</string>
    <string name="login_user_not_found_message">Usuário ou senha inválido</string>
    <string name="default_snackbar_action">OK</string>
    <string name="login_failed_default_message">Ocorreu um falha no login</string>
    <string name="title_simulations_fragment">Simulações</string>
    <string name="title_home_activity">Soluciona</string>
    <string name="menu_outras_opcoes">Outras opções</string>
    <string name="title_help_activity">Ajuda</string>
    <string name="title_about_us_fragment">Sobre</string>
    <string name="title_profile">Meu Perfil</string>
    <string name="default_loading_simulations_error_message">Ocorreu um erro durante o carregamento das informações da sua conta</string>
    <string name="simulation_empty_list">Nenhuma simulação encontrada. Clique no botão abaixo para iniciar.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">Desenvolvido por Rodrigo Henriques e Guilherme Assis.</string>
    <string name="title_activity_new_simulation">Nova Simulação</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="previous_action">ANTERIOR</string>
    <string name="action_next">PRÓXIMO</string>
    <string name="logout_failed_default_message">Ocorreu um erro ao processar seu logout</string>
    <string name="action_send_new_simulation">ENVIAR</string>
    <string name="dialog_title_warning">ATENÇÃO</string>
    <string name="dialog_new_simulation_on_back_pressed_message">Deseja cancelar essa nova simulação?</string>
    <string name="dialog_positive_button">SIM</string>
    <string name="dialog_negative_button">NÃO</string>
    <string name="subtitle_property_info">Dados do Imóvel</string>
    <string name="hint_cep">CEP</string>
    <string name="hint_neighbourhood">Bairro</string>
    <string name="hint_location">Logradouro</string>
    <string name="hint_uf">UF</string>
    <string name="hint_county">Município</string>
    <string name="hint_property_type">Tipo do Imóvel</string>
    <string name="hint_property_status">Condição do Imóvel</string>
    <string name="hint_property_price">Valor aproximado do imóvel</string>
    <string name="subtitle_financing_info">Dados do Financiamento</string>
    <string name="hint_has_financing">Possui financiamento imobiliário?</string>
    <string name="hint_financing_amount">Valor a ser financiado</string>
    <string name="hint_deadline">Prazo desejado (até 360 meses)</string>
    <string name="hint_has_property_near_by">Possui imóvel no município do financiamento?</string>
    <string name="hint_has_property_where_lives">Possui imóvel no município onde reside?</string>
    <string name="hint_birthday">Data de nascimento do comprador</string>
    <string name="subtitle_bank_account_info">Dados Bancários</string>
    <string name="hint_has_account">É correntista no Banco do Brasil?</string>
    <string name="hint_account">Conta</string>
    <string name="hint_agency">Agência</string>
    <string name="new_simulation_load_data_failed">Ocorreu um erro durante a busca das informações no servidor. Tente novamente.</string>
    <string name="new_simulation_store_data_failed">Ocorreu um erro durante o processamento da sua simulação.</string>
    <string name="dialog_try_Again">TENTAR NOVAMENTE</string>
    <string name="new_simulation_store_data_succeed">Nova simulação realizada com sucesso. Dentro de 3 dias você será notificado a respeito.</string>
    <string name="invalid_cep">Cep inválido</string>
    <string name="invalid_neighbourhood">Bairro inválido</string>
    <string name="invalid_location">Logradouro inválido</string>
    <string name="invalid_uf">UF inválida</string>
    <string name="invalid_county">Município inválido</string>
    <string name="invalid_property_type">Tipo do imvóvel não informado</string>
    <string name="invalid_property_status">Condição do imóvel não informada</string>
    <string name="invalid_price">Valor aproximado do imóvel não informado</string>
    <string name="invalid_option">Selecione uma das opções</string>
    <string name="invalid_financing_amount">Informe o valor a ser financiado</string>
    <string name="invalid_financing_deadline">Informe o prazo desejado</string>
    <string name="invalid_birthday">Data de nascimento inválida</string>
    <string name="dialog_title_success">Atenção</string>
    <string name="action_search_cep">LOCALIZAR</string>
    <string name="search_cep_default_failure">Não foi possível completar as informações deste CEP</string>
    <string name="profile_name">Nome</string>
    <string name="profile_cellphone">Celular</string>
    <string name="login_jinkings_info">A Soluciona crédito é meramente correspondente bancário do Banco do Brasil de acordo com a resolução 3954 do Banco Central do Brasil, com as funções de recepcionar e encaminhar propostas de operações de crédito.</string>
    <string name="invalid_account">Informe sua conta</string>
    <string name="invalid_agency">Informe sua agência</string>
    <string name="title_activity_document_list">Documentos</string>
    <string name="subtitle_document_list">Selecione um documento abaixo e escolha a opção desejada</string>
    <string name="default_loading_documents_error_message">Não foi possível carregar a lista de documentos</string>
    <string name="document_category_empty_list">Nenhum documento encontrado para sua categoria profissional. Entre em contato com nossa central de operações.</string>
    <string name="dialog_title_select">Selecione</string>
    <string name="title_activity_captured_image">CapturedImageActivity</string>
    <string name="user_canceled_image_capture_message">Captura de imagem cancelada</string>
    <string name="image_capture_error">Não foi possível capturar a imagem</string>
    <string name="document_updated_success_message">Documentação atualizada com sucesso</string>
    <string name="no_document_available_message">Você ainda não informou este documento</string>
</resources>
