<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_event"
            android:title="@string/title_simulations_fragment" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/title_profile_activity" />
    </group>

    <item android:title="@string/menu_outras_opcoes">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_forum"
                android:title="@string/title_help_activity" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_headset"
                android:title="@string/title_about_us_fragment" />
        </menu>
    </item>
</menu>