<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_property_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_margin="@dimen/screen_padding_default"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/screen_padding_default"
            android:layout_marginRight="@dimen/screen_padding_default">

            <br.com.jinkings.soluciona.application.ui.customview.CustomTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/property_info_text_input_cep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_cep"
                    android:inputType="number"
                    android:maxLength="8"/>
            </br.com.jinkings.soluciona.application.ui.customview.CustomTextInputLayout>

            <br.com.jinkings.soluciona.application.ui.customview.CustomTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/property_info_text_input_neighbourhood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_neighbourhood"
                    android:inputType="text" />
            </br.com.jinkings.soluciona.application.ui.customview.CustomTextInputLayout>

            <br.com.jinkings.soluciona.application.ui.customview.CustomTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/property_info_text_input_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_location"
                    android:inputType="text" />
            </br.com.jinkings.soluciona.application.ui.customview.CustomTextInputLayout>

            <br.com.jinkings.soluciona.application.ui.customview.CustomTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/property_info_text_input_uf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_uf" />
            </br.com.jinkings.soluciona.application.ui.customview.CustomTextInputLayout>

            <br.com.jinkings.soluciona.application.ui.customview.CustomTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/property_info_text_input_county"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_county"
                    android:inputType="text" />
            </br.com.jinkings.soluciona.application.ui.customview.CustomTextInputLayout>

            <br.com.jinkings.soluciona.application.ui.customview.CustomTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <br.com.jinkings.soluciona.application.ui.customview.ClickToSelectEditText
                    android:id="@+id/property_info_text_input_property_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_property_type" />
            </br.com.jinkings.soluciona.application.ui.customview.CustomTextInputLayout>

            <br.com.jinkings.soluciona.application.ui.customview.CustomTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <br.com.jinkings.soluciona.application.ui.customview.ClickToSelectEditText
                    android:id="@+id/property_info_text_input_property_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_property_status" />
            </br.com.jinkings.soluciona.application.ui.customview.CustomTextInputLayout>

            <br.com.jinkings.soluciona.application.ui.customview.CustomTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/property_info_text_input_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_property_price"
                    android:inputType="text" />
            </br.com.jinkings.soluciona.application.ui.customview.CustomTextInputLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>