<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding_default">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

    <TextView
        android:id="@+id/profile_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Fred H C Jinkings"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/primary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_cellphone"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:layout_marginTop="@dimen/default_margin"/>

    <TextView
        android:id="@+id/profile_cellphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="(98) 98989-9898"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/primary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_email"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:layout_marginTop="@dimen/default_margin"/>

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="fredjinkings@gmail.com"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/primary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_job_category"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:layout_marginTop="@dimen/default_margin"/>

    <TextView
        android:id="@+id/profile_job_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Empresário"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/primary"/>

</LinearLayout>