<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/Base.Theme.Jinkings">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:gravity="center"
        android:text="@string/section_header_personal_info"/>

    <View
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/signup_text_input_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_fullname"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_text_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/signup_text_input_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cpf"
            android:inputType="number"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>